--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@ En lugar de tirar la comida a la basura, el restaurante o la tienda de comida pu
   <img class="mapaconceptual" src="imagenes/mapaconceptual.jpeg" alt="mapa conceptual que muestra cada valor de la empresa">
 </div>
 <div class="untercio">
-  <h1 class="titulountercio">Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
+<h1 class="titulounterciocolumna col-2">Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
   <p>
     Esto representa 1300 millones de toneladas de alimentos, de los cuales el 14% corresponde al sector de los servicios alimentarios (cáterin, hoteles y restaurantes)
   </p>
+</div>
 </div>
 <div>
   <img class="datocurioso" style=margin-top:15rem src="imagenes/datoscuriosos.png" alt="datos curiosos sobre el desperdicio de alimentos">
