avances sitio web

--- a/negocio.html
+++ b/negocio.html
@@ -28,25 +28,30 @@
       <div class="contenedor">
         <div class="columna col-2">
           <h2>Convierte los alimentos no vendidos en ingresos </h2>
-          <p>Contanos sobre su negocio para comenzar:</p>
-          <p>
-            Se trata de poner en contacto establecimientos que venden alimentos
-            con personas interesadas en adquirir los excedentes que,
-            generalmente, les sobran al finalizar el día y que, efectivamente,
-            son demasiado buenos para tirarlos.
-          </p>
-          <p>
-            ODS 12.3 sobre desperdicio de alimentos: "El objetivo que se plantea
-            en concreto este ODS es el re reducir a la mitad el desperdicio de
-            alimentos per cápita mundial".
-          </p>
-          <p>
-            Por eso este proyecto quiere promover su app y conectar a
-            restaurantes y tiendas con su app, así como a consumidores para que
-            fomenten el actuar ante el desperdicio alimentario.
-          </p>
+          <p class="texto-negro">Contanos sobre su negocio para comenzar:</p>
+          <form>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,</form>
         </div>
       </div>
+      <div class="contenedor">
+        <div class="columna col-2 fondo-negocio">
+      <h2>Beneficios de poner tu negocio en nuestra app</h2>
+     <p class="texto_blanco"> La aplicación permite reducir el desperdicio de alimentos y recuperar dinero con existencias que se habrían desperdiciado: una situación beneficiosa para todos. 
+Además, el 76% de los clientes que descubren una tienda a través de Share Before Waste regresarán como clientes de pago completo.
+
+Registrarse es gratis y no pagarás nada a menos que vendas comida a través de la aplicación.</p>
+</div>
+</div>
+<div>
+          <div class="contenedor">
+            <div class="columna col-1">
+          <p class="texto-negro">Cómo funciona</p>
+          <p class="texto-negro">Complete el formulario de consulta para registrar su negocio en Share 
+            before waste y agregue sus excedentes de comida en la aplicación.</p>
+            <button><p class="boton">INSTRUCTIVO</p></button>
+      </div>
+    </div>
+    <h2>Empresas que trabajan con nosotros</h2>
+    <div>
     </main>
     <footer>
     </footer>
