--- a/negocio.html
+++ b/negocio.html
@@ -3,30 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NEGOCIO</title>
-    <link rel="stylesheet" href="estilos/estilosresponsive.css" />
-  </head>
+    <title>INICIO</title>
+  <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida ">
+    <link rel="stylesheet" href="estilos/estilos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+     crossorigin="anonymous">
+ </head>
   <body>
-    <header class="header">
-      <input id="burger" type="checkbox" />
-      <label for="burger" class="burger"> ☰ </label>
-      <div class="navbar">
-        <a href="/index.html">
-          <img
-            class="logo"
-            src="imagenes/share_before_waste_logo.png"
-            alt="logo"
-        /></a>
-        <a href="index.html">INICIO</a>
-        <a href="iniciativas.html">INICIATIVAS</a>
-        <a href="negocio.html">NEGOCIO</a>
-        <a href="usuario.html">USUARIO</a>
-        <a href="tuopinion.html">TU OPINIÓN</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"
+          ><img
+          class="logo"
+          src="imagenes/share_before_waste_logo.png"
+          alt="logo"/></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
     <main>
-      <div class="contenedor">
-        <div class="columna col-2">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
           <h2>Convierte los alimentos no vendidos en ingresos </h2>
           <p class="texto-negro">Contanos sobre su negocio para comenzar:</p>
           <form>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,</form>
@@ -53,7 +79,14 @@ Registrarse es gratis y no pagarás nada a menos que vendas comida a través de 
     <h2>Empresas que trabajan con nosotros</h2>
     <div>
     </main>
-    <footer>
-    </footer>
-  </body>
-</html>
+    <footer class="footer">
+      <div class="container-fluid">
+          <p class="pfooter">© 2023 Todos los derechos reservados.</p>
+          </div>  
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+        crossorigin="anonymous"></script>
+      </body>
+    </html>
+    
