--- a/index.html
+++ b/index.html
@@ -4,77 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INICIO</title>
-    <link rel="stylesheet" href="estilos/estilosresponsive.css" />
-  </head>
+  <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida ">
+    <link rel="stylesheet" href="estilos/estilos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+     crossorigin="anonymous">
+ </head>
   <body>
-    <header class="header">
-      <input id="burger" type="checkbox" />
-      <label for="burger" class="burger"> ☰ </label>
-      <div class="navbar">
-        <a href="/index.html">
-          <img
-            class="logo"
-            src="imagenes/share_before_waste_logo.png"
-            alt="logo"
-        /></a>
-        <a href="index.html">INICIO</a>
-        <a href="iniciativas.html">INICIATIVAS</a>
-        <a href="negocio.html">NEGOCIO</a>
-        <a href="usuario.html">USUARIO</a>
-        <a href="tuopinion.html">TU OPINIÓN</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"
+          ><img
+          class="logo"
+          src="imagenes/share_before_waste_logo.png"
+          alt="logo"/></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
     <main>
-      <section class="fondo-inicio">
-        <div class="columna col-2">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="column 2">
+        <div class="fondo-inicio">
           <h1> Salvemos juntos la buena comida</h1>
           <p>El desperdicio de alimentos es un gran problema y nosotros podemos ser una solución.</p>
           <p>Share Before Waste es la aplicación que te permite rescatar los alimentos no vendidos en tus lugares favoritos.</p>
         </div>
-    </section>
-    <span></span>
-      <div class="columna col-2">
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+      <div class="column 2">
+        <div class="contenedorsobrenosotros">
         <h2>Sobre nosotros</h2>
         <p class="sobrenosotros">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem aut a, quis sit deserunt provident? Sint eius tenetur magnam, soluta labore dolor! Dolorum, esse. In non nemo quasi ad minus?
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem aut a, quis sit deserunt provident? Sint eius tenetur magnam, soluta labore dolor! Dolorum, esse. In non nemo quasi ad minus?
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem aut a, quis sit deserunt provident? Sint eius tenetur magnam, soluta labore dolor! Dolorum, esse. In non nemo quasi ad minus?
         </p>
-        <div class="columna col-2">
-          <img class="imagen" src="imagenes/cliente.png" alt="cliente que sostiene productos del delivery" />
-          <div>
+        <div class="column 2">
+          <img class="img-fluid rounded float-end"  src="imagenes/cliente.png" alt="cliente que sostiene productos del delivery" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+    <div class="column 2">
   <h2>Misión</h2>
 </div>
-<div class="columna col-2">
 <p class="mision">
  Reducir el desperdicio de alimentos y marcar la diferencia.
-
 Somos una empresa emergente cuya misión es hacer más sostenible el sistema alimentario mundial.
-
 Nuestra aplicación ofrece a las personas poder comprar comida no vendida de los locales de su alrededor y que de otro modo se desperdiciaría. 
-
 En lugar de tirar la comida a la basura, el restaurante o la tienda de comida puede ganar dinero extra con esas últimas ventas y los consumidores pueden obtener su comida con un descuento extra.
-
 </p>
+</div>
+</div>
 <div>
-  <div class="columna col-2">
+  <div class="columna 2">
   <h2>Valores</h2>
   <p class="valores">Son la expresión de los principios que nos guían y por los que respondemos.
   </p>
-  <div class="columna col-2">
-  <img class="mapaconceptual" src="imagenes/mapaconceptual.jpeg" alt="mapa conceptual que muestra cada valor de la empresa">
+  <div class="columna column 12">
+  <img class="img-fluid rounded float-end" src="imagenes/mapaconceptual.jpeg" alt="mapa conceptual que muestra cada valor de la empresa">
 </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+  <div class="column 2">
 <div class="untercio">
-<h1 class="titulounterciocolumna col-2">Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
+<h1>Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
   <p>
     Esto representa 1300 millones de toneladas de alimentos, de los cuales el 14% corresponde al sector de los servicios alimentarios (cáterin, hoteles y restaurantes)
   </p>
 </div>
 </div>
-<div>
+</div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+  <div class="column 2">
   <img class="datocurioso" style=margin-top:15rem src="imagenes/datoscuriosos.png" alt="datos curiosos sobre el desperdicio de alimentos">
 </div>
-<div>
-  <img class="cliente" src="imagenes/usandolaapp.png">
+</div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+  <div class="column 2">
+  <img class="img-fluid rounded float-start" src="imagenes/usandolaapp.png">
   <h2>Involúcrate</h2>
   <p class="texto-negro">¿Tenes hambre? Con la aplicación Share before waste, podes comer bien mientras generas un impacto.</p>
 </div>
@@ -89,11 +134,19 @@ En lugar de tirar la comida a la basura, el restaurante o la tienda de comida pu
   </ul>
   <button><p class="boton">DESCARGA LA APLICACIÓN</p></button>
 </div>
-
   </div>
 </main>
-    <footer>
+<footer class="footer">
+  <div class="container-fluid">
       <p class="pfooter">© 2023 Todos los derechos reservados.</p>
+      </div>  
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+    crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+
+
