--- a/tuopinion.html
+++ b/tuopinion.html
@@ -3,279 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TU OPINIÓN</title>
-    <link rel="stylesheet" href="estilos/estilosresponsive.css" />
-  </head>
+    <title>INICIO</title>
+  <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida ">
+    <link rel="stylesheet" href="estilos/estilos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+     crossorigin="anonymous">
+ </head>
   <body>
-    <header class="header">
-      <input id="burger" type="checkbox" />
-      <label for="burger" class="burger"> ☰ </label>
-      <div class="navbar">
-        <a href="/index.html">
-          <img
-            class="logo"
-            src="imagenes/share_before_waste_logo.png"
-            alt="logo"
-        /></a>
-        <a href="index.html">INICIO</a>
-        <a href="iniciativas.html">INICIATIVAS</a>
-        <a href="negocio.html">NEGOCIO</a>
-        <a href="usuario.html">USUARIO</a>
-        <a href="tuopinion.html">TU OPINIÓN</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"
+          ><img
+          class="logo"
+          src="imagenes/share_before_waste_logo.png"
+          alt="logo"/></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="negocio.html">NEGOCIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="usuario.html">USUARIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
     <main>
-      <div class="contenedor">
-        <div class="columna col-2">
-          <h2>Actividad principal de la empresa:</h2>
-          <p>
-            <b>“Share before waste”</b> hace de intermediario entre restaurantes o
-            tiendas que ponen a la venta productos o alimentos que no han
-            vendido al servicio de los consumidores para no malgastar la comida.
-            Mediante una aplicación móvil las personas van a poder comprar
-            comida no vendida de los locales de su alrededor: restaurantes,
-            supermercados, panaderías, etc. Todo lo que se quedó sin vender al
-            final del día y que de otro modo se desperdiciaría, esta aplicación
-            permitirá a las personas comprarlo a un precio menor. La idea es
-            ofrecer una alternativa al desperdicio de alimentos. En lugar de
-            tirar la comida a la basura, el restaurante o la tienda de comida
-            puede ganar dinero extra con esas últimas ventas y los consumidores
-            pueden obtener su comida con un descuento extra. ¡Todos salen
-            ganando!
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+          <h2>Tu opinión nos importa</h2>
+          <p class="texto-negro">
+            Siempre estaremos felices de saber de vos! 
+            Ya sea una simple curiosidad o una pregunta urgente, envianos un correo electrónico a sharebeforewaste@sbw.com.
+            Si deseas atención al cliente, envianos un correo electrónico a soporte@sbw.com.
           </p>
         </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>Objetivos del sitio web:</h2>
-          <ol>
-            <li>
-              <p>
-                <b>Conectar</b> a las personas interesadas en acabar con el desperdicio
-                de comida y que quieran comprar alimentos a un menor costo
-                con tiendas ,restaurantes y panaderías que quieran ofrecer sus
-                excedentes de comida,generar más ganancias económicas y estén en
-                contra del desperdicio de alimentos a través de la aplicación
-                móvil o el sitio web.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <b>Posicionar</b> nuestra idea y concientizar a la sociedad,queremos a
-                partir de nuestro sitio web transmitir los valores de “share
-                before waste” contar mejor de qué se trata la propuesta ,por qué
-                es diferente a otras y por qué lo estamos haciendo.
-              </p>
-            </li>
-
-            <li>
-              <p><b>Construir</b> una relación sólida con los usuarios.</p>
-            </li>
-            <li>
-              <p>
-               <b>Aumentar</b>  la confianza de los usuarios al realizar compras online.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <b>Lograr</b> que el proceso de compra por parte del consumidor y el
-                proceso de venta por parte de la tienda o restaurante sea fácil.
-              </p>
-            </li>
-          </ol>
         </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>Estrategia para atraer tráfico al sitio web:</h2>
-          <p>
-            Usaremos palabras claves, un título SEO o title (etiqueta
-            que resume la idea principal de nuestro sitio web) .Daremos siempre
-            a cada iframe o imagen un texto alternativo corto que describa la
-            imagen o el gráfico para dar al motor de búsqueda una alternativa de
-            texto para interpretar. En un futuro conectaremos nuestro sitio web
-            a Google Analytics. Con esta herramienta, podremos ver más de cerca
-            cómo interactúan los visitantes, incluido cuánto tiempo pasan en
-            varias páginas, el camino que toman para llegar al sitio web, cómo
-            se mueven por el sitio web una vez que llegan y qué les causa "rebotar” o irse.
-          </p>
-        </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>Actividad de la institución :</h2>
-          <p>Empresa de servicios</p>
-        </div>
-        <h2>Ejes de ODS que aborda:</h2>
-      </div>
-      <div class="columna col-12">
-        <p>
-          <b>ODS 12</b>, enfocado a la producción y el consumo responsables, y en una
-          de sus metas, la 12.3:reducir a la mitad la pérdida y desperdicio de
-          alimentos para 2030.
-        </p>
-      </div>
-      <div class="columna col-2">
-        <img class="imagen" src="imagenes/ods12.jpeg" />
-      </div>
-
-      <div class="columna col-12">
-        <h2>Público Objetivo:</h2>
-        <p>
-          Jóvenes y adultos de cualquier género de entre 18 y 50 años de
-          edad(sobre todo gente que use de manera frecuente aplicaciones web en
-          sus teléfonos o desktops) qué estén interesados en el medio ambiente y
-          tengan una tendencia a preferir productos o servicios que ayuden al
-          medio ambiente y a la sociedad hacia un futuro más sostenible y
-          consciente.La nacionalidad puede variar, en realidad ser cualquiera,
-          pero está enfocado a un mercado meta argentino y en un futuro
-          Latinoamericano o hispanohablante.El poder adquisitivo es para clase
-          media y alta.A este mercado meta ( público objetivo)preferimos
-          llamarlos consumidores conscientes.
-        </p>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>Identidad Visual</h2>
-          <ul>
-            <li>
-              Nombre y logo del sitio web:<p>Share before Waste</p> 
-              <img
-                class="logo-avances"
-                src="imagenes/share_before_waste_logo.png"
-                alt="logo"
-              />
-            </li>
-            <li>
-              <div class="contenedor">
-                <div class="columna col-12">
-              Eslogan y paleta de colores:<p>"Salvemos juntos la buena comida"</p> 
-              <img
-                class="paleta-colores"
-                src="imagenes/Paletacolores.png"
-                alt="paleta-colores"/>
-              </div>
-            </div>
-            </li>
-            <li>Dominio:<p>Se utilizará el dominio proveniente de Github Pages</p></li>
-            <li>Imagen general:<p>Se busca transmitir una imagen de un delivery sustentable de comida orientado a
-              reducir a la mitad la pérdida y desperdicio de alimentos.</p></li>
-            <li>Palabras claves:<p>Delivery sustentanble - Delivery - Alimentos Comida - Ambiente - Ecologia - Saludable
-              - Organico - Empresas B</p> </li>
-          </ul>
-        </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>Árbol del sitio :</h2>
-          <img src="imagenes/arbol.png" alt="" />
-        </div>
-      </div>
-      <div class="contenedor">
-        <div class="columna col-12">
-          <h2>
-            Descripción breve de los contenidos que se incluirán en cada sección:
-          </h2>
-          <h2>Home:</h2>
-          <ul>
-            <li>
-              <p>¿Quiénes somos? Misión,visión,objetivos</p>
-            </li>
-          </ul>
-
-          <h2>Categoría iniciativas:</h2>
-          <ul>
-            <li>
-              <p>
-                Sección ¿qué pasa si no todo el excedente se logra vender ese
-                día? Explicaremos al usuario o futuros usuarios que el excedente
-                que no se logró vender es donado a comedores y albergues
-                ubicados en las zonas más precarias de cada ciudad en las que el
-                servicio de nuestra app opera.
-              </p>
-            </li>
-            <li>
-              <p>
-                Sección fotos y descripción de los albergues y comedores a los
-                que donamos(nombre,ubicación,etc).Sección concientizando a la
-                sociedad: Explicaremos al usuario o futuros usuarios que nuestra
-                empresa “share before waste” dicta talleres y cursos de
-                sostenibilidad relacionados al desperdicio de alimentos en
-                institutos educativos .
-              </p>
-            </li>
-          </ul>
-          <h2>Categoría negocio:</h2>
-          <ul>
-            <li>
-              <p>
-                Sección Registra tu negocio (Formulario si eres una tienda) Se
-                parte de nuestra comunidad,destinado a tiendas, panaderías y
-                restaurantes que están interesados en ofrecer sus productos en
-                nuestra app.
-              </p>
-            </li>
-            <li>
-              <p>Sección Beneficios de registrar tu negocio en nuestra app.</p>
-            </li>
-            <li>
-              <p>Sección empresas que ya trabajan con nosotros.</p>
-            </li>
-            <li>
-              <p>Sección instructivo de como usar nuestra app para empresas.</p>
-            </li>
-          </ul>
-          <h2>Categoría futuro usuario:</h2>
-          <ul>
-            <li>
-              <p>Sección Instructivo de como descargar y usar la app.</p>
-            </li>
-            <li>
-              <p>
-                Sección beneficios de comprar a través de share before waste.
-              </p>
-            </li>
-            <li>
-              <p>
-                Sección datos informativos sobre el desperdicio de alimentos.
-              </p>
-            </li>
-          </ul>
-
-          <h2>Categoría tu opinión nos importa:</h2>
-          <ul>
-            <li>
-              <p>
-                Sección (Formulario si eres un usuario final) : Oportunidad que
-                brindamos a las personas para que opinen sobre los productos que
-                han llegado a sus casas,sobre su experiencia en nuestro sitio
-                web o aplicación y sobre el servicio de delivery. (Para que las
-                empresas interesada escriban sus datos y los productos
-                excedentes que podrían ofrecer )
-              </p>
-            </li>
-          </ul>
-          <div class="columna col-12">
-            <h2>Rol de cada integrante:</h2>
-          <ul>
-            <li>Maquetador:</li>
-            <li>Programador:</li>
-            <li>Comunicador Web:</li>
-            <li>Diseñador UX/UI:</li>
-          </ul>
-        </div>
-          <div class="columna col-12">
-            <button>
-              <a href=https://www.figma.com/file/7loivWvWB7p2bcfW1EwZwo/Proyecto---Share-before-waste-app? target="blank">
-                <p>Haz clic aquí para ver nuestro prototipo</p></a>
-            </button>
-          </div>
         </div>
       </div>
     </main>
-    <footer>
-    </footer>
-  </body>
-</html>
+    <footer class="footer">
+      <div class="container-fluid">
+          <p class="pfooter">© 2023 Todos los derechos reservados.</p>
+          </div>  
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+        crossorigin="anonymous"></script>
+      </body>
+    </html>
+    
