--- a/iniciativas.html
+++ b/iniciativas.html
@@ -54,17 +54,26 @@
         <div class="row">
           <div class="col-md-12">
             <h2>¿Qué pasa si no se logra vender todo el excedente en un día?</h2>
-            <p class="texto-negro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-               incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-               exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <img style="width: 64.125rem;height: 36.25rem;"  src="imagenes/comedor1.png" alt="comedor de personas vulnerables">
-          <img  style="width: 64.125rem;height: 36.25rem;"src="imagenes/comedor2.png" alt="comedor de personas vulnerables">
-          <img  style="width: 64.125rem;height: 36.25rem;"src="imagenes/comedor3.png" alt="comedor de personas vulnerables">
-          <img  style="width: 64.125rem;height: 36.25rem;"src="imagenes/comedor4.png" alt="comedor de personas vulnerables">
-
+            <p class="texto-negro">Si no llegamos a vender el excedente de comida, para que no sea desperdiciada, 
+              lo donamos a comedores para la gente que lo necesite(siempre verificando que la comida este en buenas condiciones). También intentamos conservar ese excedente 
+              y prolongar el mayor tiempo posible(en caso de que se pueda) la condición en la que sean comestibles estos alimentos.</p>
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="imagenes/comedor1.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="imagenes/comedor2.png"class="d-block w-100" alt="comedor de personas vulnerables">
+                  </div>
+                    <div class="carousel-item">
+                      <img src="imagenes/comedor3.png" class="d-block w-100" alt="comedor de personas vulnerables">
+                  </div>
+                  <div class="carousel-item">
+                    <img style=position:absolute;right:-42.25rem; src="imagenes/comedor4.png"class="d-block w-100" alt="comedor de personas vulnerables">
+                </div>
+                </div>
+              </div>
+        </main>
         </main>
         <footer class="footer">
           <div class="container-fluid">
