--- a/index.html
+++ b/index.html
@@ -10,39 +10,38 @@
           rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">
-            <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="negocio.html">NEGOCIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="usuario.html">USUARIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<main>
+    <script src="https://kit.fontawesome.com/85f636b7ea.js" crossorigin="anonymous"></script>
+        </head>
+        
+        <body>
+          <header class="header">
+            <a href="/index.html">
+              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+            </a>
+            <a href="index.html">INICIO</a>
+            <a href="iniciativas.html">INICIATIVAS</a>
+            <a href="negocio.html">NEGOCIO</a>
+            <a href="usuario.html">USUARIO</a>
+            <a href="tuopinion.html">TU OPINIÓN</a>
+          </header>
+        
+          <header class="header-mobile">
+            <a class="logo-link" href="/index.html">
+              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+            </a>
+            <input class="side-menu" type="checkbox" id="side-menu" />
+            <label class="hamb" for="side-menu"><i class="fa-solid fa-bars"></i></label>
+            <nav class="nav">
+              <ul class="menu">
+                <li><a class="selected" href="index.html">INICIO</a></li>
+                <li><a href="iniciativas.html">INICIATIVAS</a></li>
+                <li><a href="negocio.html">NEGOCIO</a></li>
+                <li><a href="usuario.html">USUARIO</a></li>
+                <li><a href="tuopinion.html">TU OPINIÓN</a></li>
+              </ul>
+            </nav>
+          </header>
+          <main>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -88,7 +87,7 @@
             <div class="col-lg-6">
                 <h2>Valores</h2>
                 <p class="valores">Son la expresión de los principios que nos guían y por los que respondemos.</p>
-                <img class="img-fluid rounded" src="imagenes/mapaconceptual.jpeg" alt="mapa conceptual que muestra cada valor de la
+                <img class="img-fluid rounded" src="imagenes/mapaconceptual.jpg" alt="mapa conceptual que muestra cada valor de la
                         empresa">
             </div>
         </div>
@@ -107,7 +106,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <img class="datocurioso" style="margin-top: 15rem" src="imagenes/datoscuriosos.png" alt="datos curiosos sobre el
+                <img class="datocurioso" style="margin-top: 15rem" src="imagenes/datoscuriosos.jpg" alt="datos curiosos sobre el
                         desperdicio de alimentos">
             </div>
         </div>
@@ -115,7 +114,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <img class="img-fluid rounded" src="imagenes/usandolaapp.png" alt="cliente que sostiene productos del delivery">
+                <img class="img-fluid rounded" src="imagenes/usandolaapp.jpg" alt="cliente que sostiene productos del delivery">
                 <h2>Involúcrate</h2>
                 <p class="texto-negro">¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer bien mientras generas un
                     impacto.</p>
@@ -128,14 +127,14 @@
             </div>
         </div>
     </div>
-</main>
-<footer class="footer">
-    <div class="container">
+  </main>
+  <footer class="footer">
+    <div class="container-fluid">
         <p class="pfooter">© 2023 Todos los derechos reservados.</p>
-    </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+        </div>  
+      </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+      crossorigin="anonymous"></script>
+    </body>
+  </html>
