--- a/usuario.html
+++ b/usuario.html
@@ -1,55 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INICIO</title>
-  <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida ">
-    <link rel="stylesheet" href="estilos/estilos.css" />
+    <meta name="description" content="Delivery sustentable de alimentos para ayudar a combatir el desperdicio de comida">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-     crossorigin="anonymous">
- </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"
-          ><img
-          class="logo"
-          src="imagenes/share_before_waste_logo.png"
-          alt="logo"/></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbar"
-          aria-controls="navbar"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="iniciativas.html">INICIATIVAS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="negocio.html">NEGOCIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="usuario.html">USUARIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="tuopinion.html">TU OPINIÓN</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <main>
+          rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/85f636b7ea.js" crossorigin="anonymous"></script>
+        </head>
+        
+        <body>
+          <header class="header">
+            <a href="/index.html">
+              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+            </a>
+            <a href="index.html">INICIO</a>
+            <a href="iniciativas.html">INICIATIVAS</a>
+            <a href="negocio.html">NEGOCIO</a>
+            <a href="usuario.html">USUARIO</a>
+            <a href="tuopinion.html">TU OPINIÓN</a>
+          </header>
+        
+          <header class="header-mobile">
+            <a class="logo-link" href="/index.html">
+              <img class="logo" src="imagenes/share_before_waste_logo.png" alt="logo" />
+            </a>
+            <input class="side-menu" type="checkbox" id="side-menu" />
+            <label class="hamb" for="side-menu"><i class="fa-solid fa-bars"></i></label>
+            <nav class="nav">
+              <ul class="menu">
+                <li><a class="selected" href="index.html">INICIO</a></li>
+                <li><a href="iniciativas.html">INICIATIVAS</a></li>
+                <li><a href="negocio.html">NEGOCIO</a></li>
+                <li><a href="usuario.html">USUARIO</a></li>
+                <li><a href="tuopinion.html">TU OPINIÓN</a></li>
+              </ul>
+            </nav>
+          </header>
+          <main>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12 ">
@@ -62,9 +54,7 @@
           <button>DESCARGA LA APLICACIÓN</button>
           <button>APLICATIVO</button>
         </div>
-        <h2>Empresas que trabajan con nosotros</h2>
-        <div>
-        </main>
+   </main>
         <footer class="footer">
           <div class="container-fluid">
               <p class="pfooter">© 2023 Todos los derechos reservados.</p>
