--- a/negocio.html
+++ b/negocio.html
@@ -72,26 +72,26 @@ Registrarse es gratis y no pagarás nada a menos que vendas comida a través de 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/empresa1.png" class="d-block w-100" alt="empresa que usa nuetsros servicios">
+          <img src="imagenes/empresa1.png" class="d-block w-100" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa2.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+          <img src="imagenes/empresa2.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa3.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+          <img src="imagenes/empresa3.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa4.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+          <img src="imagenes/empresa4.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/empresa5.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+          <img src="imagenes/empresa5.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imagenes/empresa6.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+        <img src="imagenes/empresa6.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
       </div>
       <div class="carousel-item">
-        <img src="imagenes/empresa7.png"class="d-block w-100" alt="empresa que usa nuetsros servicios">
+        <img src="imagenes/empresa7.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
       </div>
     </div>
     </main>
