--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
           <main>
     <div class="container">
                 <div class="fondo-inicio">
-                    <h1>Salvemos juntos la buena comida</h1>
+                    <h1 class="titulos">Salvemos juntos la buena comida</h1>
                     <p>El desperdicio de alimentos es un gran problema y nosotros podemos ser una solución.</p>
                     <p>Share Before Waste es la aplicación que te permite rescatar los alimentos no vendidos en tus lugares
                         favoritos.</p>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="contenedorsobrenosotros">
+                <div>
                     <h2>Sobre nosotros</h2>
-                    <p class="sobrenosotros">Somos una empresa B que busca terminar con el desperdicio de comida y darle una
+                    <p class="texto-negro">Somos una empresa B que busca terminar con el desperdicio de comida y darle una
                         alternativa a aquellos que lo necesitan. Creemos que un mundo sin hambre es posible.
                         Queremos inspirar a muchos jóvenes para dejar de ver el desperdicio como un problema, para convertirlo en
                         una oportunidad. El desperdicio es oro, y se puede hacer mucho con él. Pero esto depende de la voluntad, la
@@ -62,6 +62,7 @@
                         manera diferente, algo que no es difícil, que generará un gran beneficio para las personas y el medio
                         ambiente.
                     </p>
+                <img class="img-fluid rounded"  src="imagenes/cliente.png" alt="cliente"></a>
                 </div>
             </div>
         </div>
@@ -70,7 +71,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h2>Misión</h2>
-                <p class="mision">
+                <p class="texto-negro">>
                     Reducir el desperdicio de alimentos y marcar la diferencia. Somos una empresa emergente cuya misión es hacer
                     más sostenible el sistema alimentario mundial. Nuestra aplicación ofrece a las personas poder comprar comida
                     no vendida de los locales de su alrededor y que de otro modo se desperdiciaría. En lugar de tirar la comida a la
@@ -84,23 +85,19 @@
         <div class="row">
             <div class="col-lg-6">
                 <h2>Valores</h2>
-                <p class="valores">Son la expresión de los principios que nos guían y por los que respondemos.</p>
+                <p class="texto-negro">Son la expresión de los principios que nos guían y por los que respondemos.</p>
                 <img class="img-fluid rounded" src="imagenes/mapaconceptual.jpg" alt="mapa conceptual que muestra cada valor de la
                         empresa">
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="untercio">
+        <div class="untercio">
                     <h1>Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
                     <p>Esto representa 1300 millones de toneladas de alimentos, de los cuales el 14% corresponde al sector de los
                         servicios alimentarios (cáterin, hoteles y restaurantes)</p>
                 </div>
             </div>
-        </div>
-    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
@@ -126,11 +123,7 @@
         </div>
     </div>
   </main>
-  <footer class="footer">
-    <div class="container-fluid">
-        <p class="pfooter">© 2023 Todos los derechos reservados.</p>
-        </div>  
-      </footer>
+  <footer>© 2023 Todos los derechos reservados.</footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
       crossorigin="anonymous"></script>
