--- a/negocio.html
+++ b/negocio.html
@@ -94,9 +94,10 @@ Registrarse es gratis y no pagarás nada a menos que vendas comida a través de 
         <img src="imagenes/empresa7.png"class="d-block w-100" alt="empresa que usa nuestros servicios">
       </div>
     </div>
-    </main>
-    <footer>
-      <p class="pfooter">© 2023 Todos los derechos reservados.</p>
-    </footer>
-  </body>
-</html>
+  </main>
+  <footer>© 2023 Todos los derechos reservados.</footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+      crossorigin="anonymous"></script>
+    </body>
+  </html>
