--- a/tuopinion.html
+++ b/tuopinion.html
@@ -56,11 +56,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer">
-      <div class="container-fluid">
-          <p class="pfooter">© 2023 Todos los derechos reservados.</p>
-          </div>  
-        </footer>
+    <footer>© 2023 Todos los derechos reservados.</footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
         crossorigin="anonymous"></script>
