--- a/usuario.html
+++ b/usuario.html
@@ -54,15 +54,11 @@
           <button>DESCARGA LA APLICACIÓN</button>
           <button>APLICATIVO</button>
         </div>
-   </main>
-        <footer class="footer">
-          <div class="container-fluid">
-              <p class="pfooter">© 2023 Todos los derechos reservados.</p>
-              </div>  
-            </footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
-            crossorigin="anonymous"></script>
-          </body>
-        </html>
+      </main>
+      <footer>© 2023 Todos los derechos reservados.</footer>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+          integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+          crossorigin="anonymous"></script>
+        </body>
+      </html>
         
