--- a/index.html
+++ b/index.html
@@ -93,11 +93,16 @@
     </div>
     <div class="container">
         <div class="untercio">
-                    <h1>Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
-                    <p>Esto representa 1300 millones de toneladas de alimentos, de los cuales el 14% corresponde al sector de los
-                        servicios alimentarios (cáterin, hoteles y restaurantes)</p>
-                </div>
-            </div>
+            <div>
+            <h1 class="titulos">Un tercio de todos los alimentos que se producen en el mundo se desperdician</h1>
+        </div>    
+        <section>
+        <p>Esto representa 1300 millones de toneladas de alimentos, de los cuales el 14% corresponde al sector de los
+            servicios alimentarios (cáterin, hoteles y restaurantes)</p>
+        </section> 
+    </div> 
+</div> 
+
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
