--- a/usuario.html
+++ b/usuario.html
@@ -62,7 +62,12 @@
     <main>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-12 fondo-usuario">
+          <div class="col-md-12">
+            <img class="img-fluid" src="imagenes/fondousuario.jpg" alt="fondo usuario">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
             <div>
               <h2 style="margin-top: 70rem">
                 Cada año se desperdician 2.5 mil millones de toneladas de
