--- a/usuario.html
+++ b/usuario.html
@@ -60,7 +60,7 @@
       </nav>
     </header>
     <main>
-      <div class="container-fluid">
+      <div class="container-fluid sin-padding">
         <div class="row">
           <div class="col-md-12">
             <img class="img-fluid" src="imagenes/fondousuario.jpg" alt="fondo usuario">
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-md-12">
             <div>
-              <h2 style="margin-top: 70rem">
+              <h2>
                 Cada año se desperdician 2.5 mil millones de toneladas de
                 alimento
               </h2>
