--- a/index.html
+++ b/index.html
@@ -141,24 +141,26 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="untercio">
-          <div>
+      <div class="container-fluid">
+        <div class="row g-0 ">
+          <div class="col-lg-12">
+            <img class="img-fluid" src="imagenes/untercio.jpg" alt="datos curiosos" />
             <h1 class="titulos">
               Un tercio de todos los alimentos que se producen en el mundo se
               desperdician
             </h1>
           </div>
-          <section>
-            <p>
-              Esto representa 1300 millones de toneladas de alimentos, de los
-              cuales el 14% corresponde al sector de los servicios alimentarios
-              (cáterin, hoteles y restaurantes)
-            </p>
-          </section>
         </div>
       </div>
-
+      <div>
+        <section>
+          <p>
+            Esto representa 1300 millones de toneladas de alimentos, de los
+            cuales el 14% corresponde al sector de los servicios alimentarios
+            (cáterin, hoteles y restaurantes)
+          </p>
+        </section>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
